--- a/mysql_notes.html
+++ b/mysql_notes.html
@@ -157,7 +157,7 @@
 				<li><code>GROUP BY <i>column_name;</i></code></li>
 			</ul>
 			<p>
-			<code>GROUP BY</code>: <b>do the operations to data but in different group saperately.</b><br>eg.</br>
+			<code>GROUP BY</code>: <b>do the operations to data but in different group separately.</b><br>eg.</br>
 			<pre><code>
 SELECT sum(songs.length) AS Duration,
 		release_year AS `Release Year`,
