add derived table

--- a/mysql_notes.html
+++ b/mysql_notes.html
@@ -252,6 +252,7 @@ SELECT  b.`Band Name` AS Band,
 				<i>error:1241 subquery return col error, use IN or JOIN ... ON solve</i>
 				<br>&#10007<s style="color:tomato;"><code>
 					SELECT (SELECT <i>column1, column2</i> FROM <i>t2</i>) FROM <i>t1</i>;
+					use IN or JOIN table to solve
 				</code></s>
 			</ol>
 			<h2>Optimizer</h2>
