--- a/mysql_notes.html
+++ b/mysql_notes.html
@@ -6,6 +6,15 @@
 		<title>Mysql_notes</title>
 	</head>
 	<style type="text/css" media="screen">
+	.notice_green{
+		color: yellowgreen
+	}
+	.notice_txt{
+		color: deepskyblue
+	}
+	.mark_text{
+		color: orangered
+	}
 	pre code {
 		display: block;
 		background: none;
@@ -122,11 +131,11 @@
 			</b>
 			<ol>
 				<li><code>WHERE <i>col</i></code> should be <b><code>PRIMARY KEY</code> eg. <code>WHERE id=1;</code></b> rather than others, else will error 1175</li>
-				<li>if want <i>col</i> is not <code>PRIMARY KEY</code>, eg.  <code>WHERE name = ...;</code> can use 'subquery', because the <br> <code>DELETE/UPDATE <br>SET/FROM<br> WHERE</code><br> clause can not take 'subtable' but can use 'subquery':<br><b><code>
+				<li>if want <i>col</i> is not <code>PRIMARY KEY</code>, eg.  <code>WHERE name = ...;</code> can use 'subquery', because the <br> <code>DELETE/UPDATE <br>SET/FROM<br> WHERE</code><br> clause can not take <span class="mark_text">subquery</span> but can use <span class="notice_txt">derived table</span>:<br><b><code>
 					</br>DELETE FROM bands
 					<br>	WHERE id IN (
 					<br>	SELECT id FROM
-					<br>(SELECT * FROM bands) AS bands_sub
+					<br>(SELECT * FROM bands) <span class="notice_txt">AS</span> bands_sub
 					<br>	WHERE `Band Name` = 'qz'
 					<br>);
 					</code></b>
@@ -134,13 +143,15 @@
 				<li>Before delete, if tables are related by <code>FOREIGN KEY</code>, this <code>FOREIGN KEY</code> must be <b><code>ON UPDATE/DELETE CASCADE</code></b>, if not first change it. a easy way is<br>
 					<b>
 						ALTER TABLE albums<br>
-					DROP FOREIGN KEY albums_ibfk_1;
+					<span class="mark_text">DROP FOREIGN KEY</span> albums_ibfk_1;
 					<br></br>
 					ALTER TABLE albums<br>
-					ADD CONSTRAINT fk_band_id<br>
+					<span class="mark_text">ADD CONSTRAINT</span> fk_band_id<br>
 					FOREIGN KEY (band_id) REFERENCES bands (id) ON DELETE CASCADE;
 					</b>
 				</li>
+				<br>
+				and then can DELETE it ON CASCADE;
 			</ol>
 			</p>
 			aggregations:
@@ -158,7 +169,9 @@
 				<li><code>GROUP BY <i>column_name;</i></code></li>
 			</ul>
 			<p>
-			<code>GROUP BY</code>: <b>do the operations to data but in different group separately.</b><br>eg.</br>
+			<code>GROUP BY</code>: <b>do the operations to data but in different group separately.</b><br>
+			<code class="notice_txt">GROUP BY ... WITH ROLLUP</code> and <code class="notice_txt">GROUPING()</code><br> refert to <a href="https://dev.mysql.com/doc/refman/8.0/en/group-by-modifiers.html">Doc WITH ROLLUP</a>
+			<br>eg.</br>
 			<pre><code>
 SELECT sum(songs.length) AS Duration,
 		release_year AS `Release Year`,
@@ -208,7 +221,7 @@ SELECT  b.`Band Name` AS Band,
 			<h2>Derived Table</h2>
 			<ol>
 				<li>derived tables should have its alias: error 1248</li>
-				<code>FROM (subquery) AS <i>alias name</i></code>
+				<code>FROM (subquery) AS <i>alias_name</i></code>
 				<li>if want to references other table of same SELECT, use LATERAL, else error 1054</li><br>
 				<code>SELECT <i>col</i><br>
 					FROM <i>tbl_1</i>,<br>
@@ -238,8 +251,9 @@ SELECT  b.`Band Name` AS Band,
 				<code>(expr_1, ..., expr_n) [NOT] IN (subquery)</code><br>
 				<s style="color:tomato;"><code>(expr_1, ..., expr_n) [NOT] op {ALL|ANY|SOME} (subquery)</code></s><br>
 				<code><span style="color:DodgerBlue;">expr</span> [NOT] op {ALL|ANY|SOME} (subquery)</code>
-				<li><span style="color:Gold;">NO LIMIT</span></li>
+				<li>not use <span style="color:Gold;">LIMIT</span> in subquery</li>
 				<li>incorrect column or row</li>
+				<br>
 				<i>error:1242 return row error, use IN/=ANY solve</i>
 				<br>
 				<s style="color:tomato;"><code>
@@ -248,14 +262,25 @@ SELECT  b.`Band Name` AS Band,
 				<code>
 					SELECT * FROM <i>t1</i> WHERE <i>column1</i> <span style="color:DodgerBlue;">IN/= ANY</span> (SELECT <i>column1</i> FROM <i>t2</i>);
 				</code>
-				<br>
-				<i>error:1241 subquery return col error, use IN or JOIN ... ON solve</i>
-				<br>&#10007<s style="color:tomato;"><code>
+				<br></br>
+				<i>error:1241 subquery return col error. SELECT (subquery)</i>
+				<br><span class="mark_text">&#10007</span><s style="color:tomato;"><code>
 					SELECT (SELECT <i>column1, column2</i> FROM <i>t2</i>) FROM <i>t1</i>;
-					use IN or JOIN table to solve
 				</code></s>
+				<br>as subquery can only return <span class="mark_text">one</span> scalar/col/row, so if after <span class="mark_text"><code>SELECT (subquery) FROM</code></span>, it should return as <span class="mark_text">1</span>, thus cannot choose n cols here.<br>
+				solution: use IN or JOIN after FROM.
 			</ol>
 			<h2>Optimizer</h2>
+			<code>
+				WHERE <i class="notice_green">outer_expr</i> IN (SELECT <i>inner_expr</i> FROM ... WHERE <i>subquery_where</i>)
+			</code>
+			<br>
+			<code>
+				WHER EXISTS (SELECT 1 FROM ... WHERE <i>subquery_where</i> <span class="mark_text">AND</span> <i class="notice_green">outer_expr=inner_expr</i>)
+			</code>
+			<br>
+			references: <a href="https://dev.mysql.com/doc/refman/8.0/en/subquery-optimization-with-exists.html">Doc EXISTS of subquery</a>
+			</br>
 		</div>
 	</body>
 </html>
