exists of subquery

--- a/mysql_notes.html
+++ b/mysql_notes.html
@@ -282,5 +282,12 @@ SELECT  b.`Band Name` AS Band,
 			references: <a href="https://dev.mysql.com/doc/refman/8.0/en/subquery-optimization-with-exists.html">Doc EXISTS of subquery</a>
 			</br>
 		</div>
+		<div>
+			<h1>some statement for checking or others</h1>
+			<code>
+				SHOW ERRORS;<br>
+				SELECT @@error_count;
+			</code>
+		</div>
 	</body>
 </html>
