--- a/mysql_stored_procedure.html
+++ b/mysql_stored_procedure.html
@@ -7,9 +7,15 @@
 		<link rel="stylesheet" href="/home/sharma/highlight/styles/atom-one-dark.min.css">
 		<script src="/home/sharma/highlight/highlight.min.js"></script>
 		<script>hljs.highlightAll();</script>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	</head>
 	<style type="text/css" media="screen">
-		pre code {
+		main {
+			margin: 16%;
+			padding: 1px;
+			background-color: None;
+		}
+		main > pre code {
 		display: block;
 		background: none;
 		background-color: #eee;
@@ -17,13 +23,14 @@
 		white-space: pre;
 		-webkit-overflow-scrolling: touch;
 		overflow-x: scroll;
-		max-width: 30%;
-		min-width: 60%;
+		max-width: 69%;
+		min-width: 36%;
 		padding: 0;
 	}
 
 	</style>
 	<body>
+		<main>
 		<h1>Stored Procedure</h1>
 		<pre><code class="language-sql">
 			DELIMITER $$
@@ -95,5 +102,6 @@
 		DELIMITER ;
 		</code>
 		</pre>
+		</main>
 	</body>
 </html>
