--- a/mysql_index_notes.html
+++ b/mysql_index_notes.html
@@ -4,9 +4,32 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Mysql_index_notes</title>
+		<link rel="stylesheet" href="/home/sharma/highlight/styles/atom-one-dark.min.css">
+		<script src="/home/sharma/highlight/highlight.min.js"></script>
+		<script>hljs.highlightAll();</script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	</head>
+	<style type="text/css" media="screen">
+		main {
+			margin: 16%;
+			padding: 1px;
+			background-color: None;
+		}
+		main > pre code {
+		display: block;
+		background: none;
+		background-color: #eee;
+		border: 1px solid #999;
+		white-space: pre;
+		-webkit-overflow-scrolling: touch;
+		overflow-x: scroll;
+		max-width: 69%;
+		min-width: 36%;
+		padding: 0;
+	}
+	</style>
 	<body>
+		<main>
 		<h1>INDEX</h1>
 		<div id="container">
 			<h2>CREATE</h2>
@@ -28,6 +51,7 @@
 		FROM/IN <i>database_name</i>;
 		</code></pre>
 		note: INDEX, KEYS, INDEXS can exchange, and here IN and FROM also can exchange.
+		</main>
 		<table class="table align-middle">
 		  <thead>
 			<tr>
@@ -88,7 +112,12 @@
 			</tr>
 		  </tbody>
 		</table>
-
 		</div>
+		<main>
+		<h2>select</h2>
+		<pre><code>
+		select
+		</code></pre>
+		</main>
 	</body>
 </html>
