--- a/mysql_notes.html
+++ b/mysql_notes.html
@@ -302,7 +302,7 @@
 				use outer query table:(can only use derived table)<br>
 				<br><code>
 					DELETE FROM/UPDATE/INSERT INTO <i>tbl</i><br>
-					WHERE ... (SELECT ... FROM <i>tbl</i>) <span style="color:DodgerBlue;">AS</span> <i>derived table name</i>
+					WHERE ... (SELECT ... FROM <i>tbl</i>) <span style="color:DodgerBlue;">AS</span> <i>derived_table_name</i>
 				</code>
 				<li>n-tuple comparition:</li>
 				<br>
